@@ -14,7 +14,10 @@ PHP                                                                        NEWS
   after end of stream). (Keisial at gmail dot com, Greg)
 - Fixed bug #44251, #41125 (PDO + quote() + prepare() can result in segfault).
   (tsteiner at nerdclub dot net)
+- Fixed bug #42078 (pg_meta_data mix tables metadata from different schemas).
+  (Felipe)
 - Fixed bug #37100 (data is returned truncated with BINARY CURSOR). (Tony)
+- Fixed bug #24679 (pg_* functions doesn't work using schema). (Felipe)
 
 09 Oct 2008, PHP 5.2.7RC1
 - Reverted fix for bug #44197 due to behaviour change in minor version.
